# igcl-fan-control

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md
docs/: HARDWARE-NOTES.md  SCHEDULED-TASK.md
release_dist/: igcl-fan-control.ini
scripts/: install-scheduled-task.ps1  uninstall-scheduled-task.ps1
src/: fan_control.cpp  fan_control.h  gpu_discovery.cpp  gpu_discovery.h  ini_reader.cpp  ini_reader.h  main.cpp  result_utils.cpp  result_utils.h
